fixed tagbox editor line wrapping

--- a/less/tagbox.less
+++ b/less/tagbox.less
@@ -60,7 +60,7 @@
 }
 
 .tr-tagbox-editor {
-  flex: 1 0 10px;
+  flex: 1 0 auto;
   min-width: 10px;
   max-width: 100%;
   outline: none;
